@startuml

title __CHESSAPP's Class Diagram__\n

  namespace  {
    class Bishop {
    }
  }
  

  namespace  {
    class Chess {
    }
  }
  

  namespace  {
    class ChessBoard {
    }
  }
  

  namespace  {
    class King {
    }
  }
  

  namespace  {
    class Knight {
    }
  }
  

  namespace  {
    class Pawn {
    }
  }
  

  namespace  {
    enum PieceType {
    }
  }
  

  namespace  {
    class Queen {
    }
  }
  

  namespace  {
    class Rook {
    }
  }
  

  Bishop -up-|> ChessPiece
  Chess -up-|> GraphicsProgram
  Chess o-- ChessBoard : board
  ChessBoard -up-|> DrawableObject
  King -up-|> ChessPiece
  Knight -up-|> ChessPiece
  Pawn -up-|> ChessPiece
  Queen -up-|> ChessPiece
  Rook -up-|> ChessPiece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
